--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,11 +1,18 @@
+<% include partials/header%>
 <h1>RESULTS</h1>
 
 <% data["Search"].forEach(function(movie) {%>
 	<ul>
-		<li><strong>
+		<li>
+			<img src="<%=movie["Poster"] %>">
+			<p>
+			<strong>
 				<%= movie["Title"] %>
 			</strong>
 			 - <%= movie["Year"] %>
+			</p>
 		</li>
 	</ul>
 <% }) %>
+<% include partials/footer%>
+
