--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,6 +1,20 @@
-<h1>Search for a Movie</h1>
+<% include partials/header%>
 
-<form action = "/results" method = "GET">
-	<input type = "text" placeholder = "search movie" name = "search">
-	<input type = "submit">
-</form>
+<div class = "container">
+	<strong>
+		<p>Looking for a Movie?</p>
+		<p>Search Here</p>
+	</strong>
+	<div>
+		<form action = "/results" method = "GET" id = "search-form_3">
+			<input type = "text" class = "search_3" placeholder = "Search..." name = "search" required>
+			<input type = "submit" class = "submit_3" value="Search">
+		</form>
+	</div>
+
+</div>
+
+<% include partials/footer%>
+
+
+
