--- a/views/results.ejs
+++ b/views/results.ejs
@@ -9,12 +9,12 @@
 		
 			
 				<img class = "center" src="<%=movie["Poster"] %>">
-				<p>
+				<p><a href="https://www.imdb.com/title/<%=movie["imdbID"]%>/">
 				<strong>
 					<%= movie["Title"] %>
 				</strong>
 				 - <%= movie["Year"] %>
-				</p>
+				</p></a>
 			
 		
 	<% }) %>
