Add check for udefined data

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,7 +1,7 @@
 <% include partials/header%>
 <h1>RESULTS</h1>
 
-<%if (data["Search"] === 'undefined') {%>
+<%if (data["Response"] == "False") {%>
 	<h1>Nothing to Show!</h1>
 	
 <%} else {%>
