--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,10 +1,7 @@
 <% include partials/header%>
 
-<div class = "container">
-	<strong>
-		<p>Looking for a Movie?</p>
-		<p>Search Here</p>
-	</strong>
+<div class = "wrapper">
+	<section align="center"><strong>Movie Search</strong></section>
 	<div>
 		<form action = "/results" method = "GET" id = "search-form_3">
 			<input type = "text" class = "search_3" placeholder = "Search..." name = "search" required>
