--- a/public/app.css
+++ b/public/app.css
@@ -1,21 +1,39 @@
 
 
 body {
-	 background-color: lightblue;
+	 background: url("img.jpg") no-repeat center center fixed;
+	 background-size: cover;
 }
 
-.container {
-	width: 400px;
-	height: 300px;
-	margin: 50px auto;
-	border: 3px solid black;
-	background-color: #b9e9b9;
-
+.wrapper {
+	margin: 6% auto;
+	max-width: 400px;
+	width: 95%;
+	min-height: 320px;
+	background: rgba(49, 39, 88, 0.6);
+	box-shadow: 1px 1px 2px black;
 }
 
 h1 {
 	text-align: center;
 	font-size: 2.4em;
+	font-family: "Arvo", serif !important;
+	font-weight: 700 !important;
+	
+}
+
+span {
+	width: 320px;
+	height: 440px;
+	margin: 100px auto;
+}
+
+.titles {
+	margin: 3% auto;
+	max-width: 420px;
+	width: 95%;
+	background: rgba(49, 39, 88, 0.6);
+	box-shadow: 1px 1px 2px black;
 }
 
 li {
@@ -26,23 +44,35 @@ li {
 	color: white;
 }
 
+section {
+	font-size: 2.4rem;
+	margin: 60px auto;
+	padding: 30px auto;
+	width: 90%;
+	display: inline-block;
+	text-align: center;
+}
+
 p {
 	text-align: center;
 	font-size: 1.8em;
 	font-weight: 1.3em;
+	margin: 30px auto;
 }
 
 .center {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 30%;
+  margin-top: 30px;
+  width: 60%;
+  height: 90%;
 }
 
 #search-form_3 {
 	background: #e1e1e1; /* Fallback color for non-css3 browsers */
-	width: 365px;
-	margin: 60px auto;
+	width: 330px;
+	margin: 80px auto;
 
 	/* Gradients */
 	background: -webkit-gradient( linear,left top, left bottom, color-stop(0, rgb(243,243,243)), color-stop(1, rgb(225,225,225)));
@@ -130,6 +160,7 @@ p {
 	/* Gradients */
 	background: -webkit-gradient( linear, left top, left bottom, color-stop(0, rgb(89,222,27)), color-stop(0.15, rgb(83,179,38)), color-stop(0.8, rgb(66,143,27)), color-stop(1, rgb(54,120,22)));
 	background: -moz-linear-gradient( center top, rgb(89,222,27) 0%, rgb(83,179,38) 15%, rgb(66,143,27) 80%, rgb(54,120,22) 100%);
+	transform: scale(1.1);
 }
 .submit_3:active {
 	background: #4ea923; /* Fallback color for non-css3 browsers */
@@ -147,7 +178,7 @@ p {
 }
 
  @media only screen and (max-width: 500px) {
-  .container {
+  .wrapper {
   		width: 300px;
 
 	}
@@ -155,7 +186,7 @@ p {
 		width:60%;
 	}
 	p {
-		font-size: 1.4em;
+		font-size: 2em;
 	}
 	#search-form_3 {
 		width: 95%;
